--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "liveServer.settings.port": 5501,
-    "python.pythonPath": "C:\\Users\\윤준석\\AppData\\Local\\Programs\\Python\\Python38-32\\python.exe",
+    "python.pythonPath": "C:\\Users\\윤준석\\AppData\\Local\\Programs\\Python\\Python38\\python.exe",
     "python.formatting.provider": "autopep8",
     "python.linting.pylintEnabled": false,
     "python.linting.flake8Enabled": true,
